--- a/views/student.ejs
+++ b/views/student.ejs
@@ -7,34 +7,16 @@
   <script src="/script.js" defer></script>
 </head>
 <body>
-  <h1>Totally Alma</h1>
+  <h1>Fried & Ayala Advisory</h1>
 
   <div class="card-container">
     <% for(let i = 0; i < students.length; i++){ %>
       <div class="card">
-        <img src="<%= students[i].image %>" alt="Profile Picture">
+        <img src="/pfp.png" alt="Profile Picture">
         <h2><%= students[i].name %></h2>
-        <p>Grade: <%= students[i].grade %></p>
+        <p>Average Grade: <%= students[i].grade %></p>
 
-        <div class="button-wrapper">
-            <!-- Task 5: Add a form to update the student's grade -->
-            <!-- Make sure the new grade is a number from 0 to 100 -->
-            <!-- Go to script.js to complete Task 6 -->
-              <div class="card">
-                <form onsubmit="updateStudent(event, '<%= students[i]._id %>')">
-                  <input name="name" value="<%= students[i].name %>" />
-                  <input name="image"  value="<%= students[i].image %>" />
-                  <input name="grade" type="number" max="100" min="0" value="<%= students[i].grade %>" />
-
-                  <button type="submit">Update</button>
-                </form>
-              </div>
-
-            <!-- Task 2: Add a button to delete the entire student by ID -->
-            <!-- Go to script.js to complete Task 3 -->
-              <button onclick="deleteStudent('<%= students[i]._id %>')">Delete</button>
-           
-        </div>
+       
 
       </div>
     <% } %>
