--- a/views/student.ejs
+++ b/views/student.ejs
@@ -7,7 +7,7 @@
   <script src="/script.js" defer></script>
 </head>
 <body>
-  <h1>Totally Alma</h1>
+  <h1>Talented Squad Grade Tracker</h1>
 
   <div class="card-container">
     <% for(let i = 0; i < students.length; i++){ %>
@@ -17,9 +17,6 @@
         <p>Grade: <%= students[i].grade %></p>
 
         <div class="button-wrapper">
-            <!-- Task 5: Add a form to update the student's grade -->
-            <!-- Make sure the new grade is a number from 0 to 100 -->
-            <!-- Go to script.js to complete Task 6 -->
               <div class="card">
                 <form onsubmit="updateStudent(event, '<%= students[i]._id %>')">
                   <input name="name" value="<%= students[i].name %>" />
@@ -30,8 +27,6 @@
                 </form>
               </div>
 
-            <!-- Task 2: Add a button to delete the entire student by ID -->
-            <!-- Go to script.js to complete Task 3 -->
               <button onclick="deleteStudent('<%= students[i]._id %>')">Delete</button>
            
         </div>
