--- a/views/student.ejs
+++ b/views/student.ejs
@@ -55,14 +55,12 @@
       <button type="submit">Update</button>
     </form>
 
-    <button onclick="addStudent('<%= s._id %>')">Delete</button>
+    <button onclick="deleteStudent('<%= s._id %>')">Delete</button>
     
   </div>
 
   <% } %>
 
-
- 
 
  
 </div>
